<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_feed"
        android:icon="@drawable/ic_nav_feed"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/tab_search"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:checkable="false"
        android:title="" />

    <item
        android:id="@+id/tab_notification"
        android:icon="@drawable/ic_nav_notification"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/tab_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/title_profile" />

</menu>