<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_password_pattern"
        android:padding="15dp"
        android:clipToPadding="false"
        android:layout_margin="20dp"
        android:elevation="10dp" >

        <TextView
            android:id="@+id/password_rule_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_popup_title"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/password_rule_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_rule_1"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/password_rule_popup"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/password_rule_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_rule_2"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/password_rule_1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/password_rule_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_rule_3"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/password_rule_2"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/password_rule_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_rule_4"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/password_rule_3"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>